parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Unused terminals:

    FP
    SWPB
    MSR
    LDSH
    SWP
    BX
    COMMENT
    LDR
    LDM
    PC
    LR
    LDSB
    IP
    MRS
    LDRB
    STR
    STRB
    LDRH
    STM
    SP
    STRH
    SL

Grammar

Rule 0     S' -> commands
Rule 1     commands -> <empty>
Rule 2     commands -> commands line
Rule 3     line -> LABEL command
Rule 4     line -> command
Rule 5     command -> adc_cmd argument argument shifter
Rule 6     adc_cmd -> ADC
Rule 7     adc_cmd -> ADC STATUS
Rule 8     adc_cmd -> ADC condition STATUS
Rule 9     adc_cmd -> ADC condition
Rule 10    command -> add_cmd argument argument shifter
Rule 11    add_cmd -> ADD
Rule 12    add_cmd -> ADD STATUS
Rule 13    add_cmd -> ADD condition STATUS
Rule 14    add_cmd -> ADD condition
Rule 15    command -> and_cmd argument argument shifter
Rule 16    and_cmd -> AND
Rule 17    and_cmd -> AND STATUS
Rule 18    and_cmd -> AND condition STATUS
Rule 19    and_cmd -> AND condition
Rule 20    command -> b_cmd branchtarget
Rule 21    b_cmd -> B
Rule 22    b_cmd -> B condition
Rule 23    b_cmd -> B LINK
Rule 24    command -> bic_cmd argument argument shifter
Rule 25    bic_cmd -> BIC
Rule 26    bic_cmd -> BIC STATUS
Rule 27    bic_cmd -> BIC condition STATUS
Rule 28    bic_cmd -> BIC condition
Rule 29    command -> cmn_cmd argument shifter
Rule 30    cmn_cmd -> CMN
Rule 31    cmn_cmd -> CMN STATUS
Rule 32    cmn_cmd -> CMN condition STATUS
Rule 33    cmn_cmd -> CMN condition
Rule 34    command -> cmp_cmd argument shifter
Rule 35    cmp_cmd -> CMP
Rule 36    cmp_cmd -> CMP STATUS
Rule 37    cmp_cmd -> CMP condition STATUS
Rule 38    cmp_cmd -> CMP condition
Rule 39    command -> eor_cmd argument argument shifter
Rule 40    eor_cmd -> EOR
Rule 41    eor_cmd -> EOR STATUS
Rule 42    eor_cmd -> EOR condition STATUS
Rule 43    bic_cmd -> EOR condition
Rule 44    command -> mla_cmd argument argument argument argument
Rule 45    mla_cmd -> MLA
Rule 46    mla_cmd -> MLA STATUS
Rule 47    mla_cmd -> MLA condition STATUS
Rule 48    bic_cmd -> MLA condition
Rule 49    command -> mov_cmd argument shifter
Rule 50    mov_cmd -> MOV
Rule 51    mov_cmd -> MOV STATUS
Rule 52    mov_cmd -> MOV condition STATUS
Rule 53    mov_cmd -> MOV condition
Rule 54    command -> mul_cmd argument argument argument argument
Rule 55    mul_cmd -> MUL
Rule 56    mul_cmd -> MUL STATUS
Rule 57    mla_cmd -> MUL condition STATUS
Rule 58    command -> mvn_cmd argument shifter
Rule 59    mvn_cmd -> MVN
Rule 60    mvn_cmd -> MVN STATUS
Rule 61    mvn_cmd -> MVN condition STATUS
Rule 62    mvn_cmd -> MVN condition
Rule 63    command -> orr_cmd argument argument shifter
Rule 64    orr_cmd -> ORR
Rule 65    orr_cmd -> ORR STATUS
Rule 66    orr_cmd -> ORR condition STATUS
Rule 67    bic_cmd -> ORR condition
Rule 68    command -> rsb_cmd argument argument shifter
Rule 69    rsb_cmd -> RSB
Rule 70    rsb_cmd -> RSB STATUS
Rule 71    rsb_cmd -> RSB condition STATUS
Rule 72    rsb_cmd -> RSB condition
Rule 73    command -> rsc_cmd argument argument shifter
Rule 74    rsc_cmd -> RSC
Rule 75    rsc_cmd -> RSC STATUS
Rule 76    rsc_cmd -> RSC condition STATUS
Rule 77    rsc_cmd -> RSC condition
Rule 78    command -> sbc_cmd argument argument shifter
Rule 79    sbc_cmd -> SBC
Rule 80    sbc_cmd -> SBC STATUS
Rule 81    sbc_cmd -> SBC condition STATUS
Rule 82    sbc_cmd -> SBC condition
Rule 83    command -> smlal_cmd argument argument argument argument
Rule 84    smlal_cmd -> SMLAL
Rule 85    smlal_cmd -> SMLAL STATUS
Rule 86    smlal_cmd -> SMLAL condition STATUS
Rule 87    smlal_cmd -> SMLAL condition
Rule 88    command -> smull_cmd argument argument argument argument
Rule 89    smull_cmd -> SMULL
Rule 90    smull_cmd -> SMULL STATUS
Rule 91    smull_cmd -> SMULL condition STATUS
Rule 92    smull_cmd -> SMULL condition
Rule 93    command -> sub_cmd argument argument shifter
Rule 94    sub_cmd -> SUB
Rule 95    sub_cmd -> SUB STATUS
Rule 96    sub_cmd -> SUB condition STATUS
Rule 97    sub_cmd -> SUB condition
Rule 98    command -> teq_cmd argument shifter
Rule 99    teq_cmd -> TEQ
Rule 100   teq_cmd -> TEQ STATUS
Rule 101   teq_cmd -> TEQ condition STATUS
Rule 102   teq_cmd -> TEQ condition
Rule 103   command -> tst_cmd argument shifter
Rule 104   tst_cmd -> TST
Rule 105   tst_cmd -> TST STATUS
Rule 106   tst_cmd -> TST condition STATUS
Rule 107   tst_cmd -> TST condition
Rule 108   command -> umlal_cmd argument argument argument argument
Rule 109   umlal_cmd -> UMLAL
Rule 110   umlal_cmd -> UMLAL STATUS
Rule 111   umlal_cmd -> UMLAL condition STATUS
Rule 112   umlal_cmd -> UMLAL condition
Rule 113   command -> umull_cmd argument argument argument argument
Rule 114   umull_cmd -> UMULL
Rule 115   umull_cmd -> UMULL STATUS
Rule 116   umull_cmd -> UMULL condition STATUS
Rule 117   umull_cmd -> UMULL condition
Rule 118   target -> LABELTARGET
Rule 119   target -> IMMTARGET
Rule 120   target -> IMMHEXTARGET
Rule 121   branchtarget -> LABEL
Rule 122   branchtarget -> argument
Rule 123   shifter -> argument shift argument
Rule 124   shifter -> argument
Rule 125   argument -> HEXNUM
Rule 126   argument -> CONSTNUM
Rule 127   argument -> REGISTER
Rule 128   condition -> AL
Rule 129   condition -> CC
Rule 130   condition -> CS
Rule 131   condition -> EQ
Rule 132   condition -> GE
Rule 133   condition -> GT
Rule 134   condition -> HI
Rule 135   condition -> HS
Rule 136   condition -> LE
Rule 137   condition -> LO
Rule 138   condition -> LS
Rule 139   condition -> LT
Rule 140   condition -> MI
Rule 141   condition -> NE
Rule 142   condition -> PL
Rule 143   condition -> VC
Rule 144   condition -> VS
Rule 145   shift -> LSL
Rule 146   shift -> LSR
Rule 147   shift -> ASR
Rule 148   shift -> ROR
Rule 149   shift -> RRX

Terminals, with rules where they appear

ADC                  : 6 7 8 9
ADD                  : 11 12 13 14
AL                   : 128
AND                  : 16 17 18 19
ASR                  : 147
B                    : 21 22 23
BIC                  : 25 26 27 28
BX                   : 
CC                   : 129
CMN                  : 30 31 32 33
CMP                  : 35 36 37 38
COMMENT              : 
CONSTNUM             : 126
CS                   : 130
EOR                  : 40 41 42 43
EQ                   : 131
FP                   : 
GE                   : 132
GT                   : 133
HEXNUM               : 125
HI                   : 134
HS                   : 135
IMMHEXTARGET         : 120
IMMTARGET            : 119
IP                   : 
LABEL                : 3 121
LABELTARGET          : 118
LDM                  : 
LDR                  : 
LDRB                 : 
LDRH                 : 
LDSB                 : 
LDSH                 : 
LE                   : 136
LINK                 : 23
LO                   : 137
LR                   : 
LS                   : 138
LSL                  : 145
LSR                  : 146
LT                   : 139
MI                   : 140
MLA                  : 45 46 47 48
MOV                  : 50 51 52 53
MRS                  : 
MSR                  : 
MUL                  : 55 56 57
MVN                  : 59 60 61 62
NE                   : 141
ORR                  : 64 65 66 67
PC                   : 
PL                   : 142
REGISTER             : 127
ROR                  : 148
RRX                  : 149
RSB                  : 69 70 71 72
RSC                  : 74 75 76 77
SBC                  : 79 80 81 82
SL                   : 
SMLAL                : 84 85 86 87
SMULL                : 89 90 91 92
SP                   : 
STATUS               : 7 8 12 13 17 18 26 27 31 32 36 37 41 42 46 47 51 52 56 57 60 61 65 66 70 71 75 76 80 81 85 86 90 91 95 96 100 101 105 106 110 111 115 116
STM                  : 
STR                  : 
STRB                 : 
STRH                 : 
SUB                  : 94 95 96 97
SWP                  : 
SWPB                 : 
TEQ                  : 99 100 101 102
TST                  : 104 105 106 107
UMLAL                : 109 110 111 112
UMULL                : 114 115 116 117
VC                   : 143
VS                   : 144
error                : 

Nonterminals, with rules where they appear

adc_cmd              : 5
add_cmd              : 10
and_cmd              : 15
argument             : 5 5 10 10 15 15 24 24 29 34 39 39 44 44 44 44 49 54 54 54 54 58 63 63 68 68 73 73 78 78 83 83 83 83 88 88 88 88 93 93 98 103 108 108 108 108 113 113 113 113 122 123 123 124
b_cmd                : 20
bic_cmd              : 24
branchtarget         : 20
cmn_cmd              : 29
cmp_cmd              : 34
command              : 3 4
commands             : 2 0
condition            : 8 9 13 14 18 19 22 27 28 32 33 37 38 42 43 47 48 52 53 57 61 62 66 67 71 72 76 77 81 82 86 87 91 92 96 97 101 102 106 107 111 112 116 117
eor_cmd              : 39
line                 : 2
mla_cmd              : 44
mov_cmd              : 49
mul_cmd              : 54
mvn_cmd              : 58
orr_cmd              : 63
rsb_cmd              : 68
rsc_cmd              : 73
sbc_cmd              : 78
shift                : 123
shifter              : 5 10 15 24 29 34 39 49 58 63 68 73 78 93 98 103
smlal_cmd            : 83
smull_cmd            : 88
sub_cmd              : 93
target               : 
teq_cmd              : 98
tst_cmd              : 103
umlal_cmd            : 108
umull_cmd            : 113

Parsing method: LALR

state 0

    (0) S' -> . commands
    (1) commands -> .
    (2) commands -> . commands line

    LABEL           reduce using rule 1 (commands -> .)
    ADC             reduce using rule 1 (commands -> .)
    ADD             reduce using rule 1 (commands -> .)
    AND             reduce using rule 1 (commands -> .)
    B               reduce using rule 1 (commands -> .)
    BIC             reduce using rule 1 (commands -> .)
    EOR             reduce using rule 1 (commands -> .)
    MLA             reduce using rule 1 (commands -> .)
    ORR             reduce using rule 1 (commands -> .)
    CMN             reduce using rule 1 (commands -> .)
    CMP             reduce using rule 1 (commands -> .)
    MUL             reduce using rule 1 (commands -> .)
    MOV             reduce using rule 1 (commands -> .)
    MVN             reduce using rule 1 (commands -> .)
    RSB             reduce using rule 1 (commands -> .)
    RSC             reduce using rule 1 (commands -> .)
    SBC             reduce using rule 1 (commands -> .)
    SMLAL           reduce using rule 1 (commands -> .)
    SMULL           reduce using rule 1 (commands -> .)
    SUB             reduce using rule 1 (commands -> .)
    TEQ             reduce using rule 1 (commands -> .)
    TST             reduce using rule 1 (commands -> .)
    UMLAL           reduce using rule 1 (commands -> .)
    UMULL           reduce using rule 1 (commands -> .)
    $end            reduce using rule 1 (commands -> .)

    commands                       shift and go to state 1

state 1

    (0) S' -> commands .
    (2) commands -> commands . line
    (3) line -> . LABEL command
    (4) line -> . command
    (5) command -> . adc_cmd argument argument shifter
    (10) command -> . add_cmd argument argument shifter
    (15) command -> . and_cmd argument argument shifter
    (20) command -> . b_cmd branchtarget
    (24) command -> . bic_cmd argument argument shifter
    (29) command -> . cmn_cmd argument shifter
    (34) command -> . cmp_cmd argument shifter
    (39) command -> . eor_cmd argument argument shifter
    (44) command -> . mla_cmd argument argument argument argument
    (49) command -> . mov_cmd argument shifter
    (54) command -> . mul_cmd argument argument argument argument
    (58) command -> . mvn_cmd argument shifter
    (63) command -> . orr_cmd argument argument shifter
    (68) command -> . rsb_cmd argument argument shifter
    (73) command -> . rsc_cmd argument argument shifter
    (78) command -> . sbc_cmd argument argument shifter
    (83) command -> . smlal_cmd argument argument argument argument
    (88) command -> . smull_cmd argument argument argument argument
    (93) command -> . sub_cmd argument argument shifter
    (98) command -> . teq_cmd argument shifter
    (103) command -> . tst_cmd argument shifter
    (108) command -> . umlal_cmd argument argument argument argument
    (113) command -> . umull_cmd argument argument argument argument
    (6) adc_cmd -> . ADC
    (7) adc_cmd -> . ADC STATUS
    (8) adc_cmd -> . ADC condition STATUS
    (9) adc_cmd -> . ADC condition
    (11) add_cmd -> . ADD
    (12) add_cmd -> . ADD STATUS
    (13) add_cmd -> . ADD condition STATUS
    (14) add_cmd -> . ADD condition
    (16) and_cmd -> . AND
    (17) and_cmd -> . AND STATUS
    (18) and_cmd -> . AND condition STATUS
    (19) and_cmd -> . AND condition
    (21) b_cmd -> . B
    (22) b_cmd -> . B condition
    (23) b_cmd -> . B LINK
    (25) bic_cmd -> . BIC
    (26) bic_cmd -> . BIC STATUS
    (27) bic_cmd -> . BIC condition STATUS
    (28) bic_cmd -> . BIC condition
    (43) bic_cmd -> . EOR condition
    (48) bic_cmd -> . MLA condition
    (67) bic_cmd -> . ORR condition
    (30) cmn_cmd -> . CMN
    (31) cmn_cmd -> . CMN STATUS
    (32) cmn_cmd -> . CMN condition STATUS
    (33) cmn_cmd -> . CMN condition
    (35) cmp_cmd -> . CMP
    (36) cmp_cmd -> . CMP STATUS
    (37) cmp_cmd -> . CMP condition STATUS
    (38) cmp_cmd -> . CMP condition
    (40) eor_cmd -> . EOR
    (41) eor_cmd -> . EOR STATUS
    (42) eor_cmd -> . EOR condition STATUS
    (45) mla_cmd -> . MLA
    (46) mla_cmd -> . MLA STATUS
    (47) mla_cmd -> . MLA condition STATUS
    (57) mla_cmd -> . MUL condition STATUS
    (50) mov_cmd -> . MOV
    (51) mov_cmd -> . MOV STATUS
    (52) mov_cmd -> . MOV condition STATUS
    (53) mov_cmd -> . MOV condition
    (55) mul_cmd -> . MUL
    (56) mul_cmd -> . MUL STATUS
    (59) mvn_cmd -> . MVN
    (60) mvn_cmd -> . MVN STATUS
    (61) mvn_cmd -> . MVN condition STATUS
    (62) mvn_cmd -> . MVN condition
    (64) orr_cmd -> . ORR
    (65) orr_cmd -> . ORR STATUS
    (66) orr_cmd -> . ORR condition STATUS
    (69) rsb_cmd -> . RSB
    (70) rsb_cmd -> . RSB STATUS
    (71) rsb_cmd -> . RSB condition STATUS
    (72) rsb_cmd -> . RSB condition
    (74) rsc_cmd -> . RSC
    (75) rsc_cmd -> . RSC STATUS
    (76) rsc_cmd -> . RSC condition STATUS
    (77) rsc_cmd -> . RSC condition
    (79) sbc_cmd -> . SBC
    (80) sbc_cmd -> . SBC STATUS
    (81) sbc_cmd -> . SBC condition STATUS
    (82) sbc_cmd -> . SBC condition
    (84) smlal_cmd -> . SMLAL
    (85) smlal_cmd -> . SMLAL STATUS
    (86) smlal_cmd -> . SMLAL condition STATUS
    (87) smlal_cmd -> . SMLAL condition
    (89) smull_cmd -> . SMULL
    (90) smull_cmd -> . SMULL STATUS
    (91) smull_cmd -> . SMULL condition STATUS
    (92) smull_cmd -> . SMULL condition
    (94) sub_cmd -> . SUB
    (95) sub_cmd -> . SUB STATUS
    (96) sub_cmd -> . SUB condition STATUS
    (97) sub_cmd -> . SUB condition
    (99) teq_cmd -> . TEQ
    (100) teq_cmd -> . TEQ STATUS
    (101) teq_cmd -> . TEQ condition STATUS
    (102) teq_cmd -> . TEQ condition
    (104) tst_cmd -> . TST
    (105) tst_cmd -> . TST STATUS
    (106) tst_cmd -> . TST condition STATUS
    (107) tst_cmd -> . TST condition
    (109) umlal_cmd -> . UMLAL
    (110) umlal_cmd -> . UMLAL STATUS
    (111) umlal_cmd -> . UMLAL condition STATUS
    (112) umlal_cmd -> . UMLAL condition
    (114) umull_cmd -> . UMULL
    (115) umull_cmd -> . UMULL STATUS
    (116) umull_cmd -> . UMULL condition STATUS
    (117) umull_cmd -> . UMULL condition

    LABEL           shift and go to state 9
    ADC             shift and go to state 39
    ADD             shift and go to state 37
    AND             shift and go to state 42
    B               shift and go to state 32
    BIC             shift and go to state 22
    EOR             shift and go to state 11
    MLA             shift and go to state 24
    ORR             shift and go to state 29
    CMN             shift and go to state 2
    CMP             shift and go to state 17
    MUL             shift and go to state 14
    MOV             shift and go to state 44
    MVN             shift and go to state 38
    RSB             shift and go to state 45
    RSC             shift and go to state 46
    SBC             shift and go to state 28
    SMLAL           shift and go to state 16
    SMULL           shift and go to state 36
    SUB             shift and go to state 4
    TEQ             shift and go to state 48
    TST             shift and go to state 15
    UMLAL           shift and go to state 19
    UMULL           shift and go to state 5

    cmp_cmd                        shift and go to state 3
    and_cmd                        shift and go to state 6
    add_cmd                        shift and go to state 7
    sbc_cmd                        shift and go to state 8
    adc_cmd                        shift and go to state 10
    tst_cmd                        shift and go to state 12
    mul_cmd                        shift and go to state 13
    sub_cmd                        shift and go to state 18
    umull_cmd                      shift and go to state 20
    bic_cmd                        shift and go to state 21
    smull_cmd                      shift and go to state 23
    rsc_cmd                        shift and go to state 25
    teq_cmd                        shift and go to state 26
    umlal_cmd                      shift and go to state 27
    cmn_cmd                        shift and go to state 30
    b_cmd                          shift and go to state 31
    mla_cmd                        shift and go to state 33
    rsb_cmd                        shift and go to state 34
    smlal_cmd                      shift and go to state 35
    mvn_cmd                        shift and go to state 40
    line                           shift and go to state 41
    eor_cmd                        shift and go to state 43
    mov_cmd                        shift and go to state 47
    command                        shift and go to state 49
    orr_cmd                        shift and go to state 50

state 2

    (30) cmn_cmd -> CMN .
    (31) cmn_cmd -> CMN . STATUS
    (32) cmn_cmd -> CMN . condition STATUS
    (33) cmn_cmd -> CMN . condition
    (128) condition -> . AL
    (129) condition -> . CC
    (130) condition -> . CS
    (131) condition -> . EQ
    (132) condition -> . GE
    (133) condition -> . GT
    (134) condition -> . HI
    (135) condition -> . HS
    (136) condition -> . LE
    (137) condition -> . LO
    (138) condition -> . LS
    (139) condition -> . LT
    (140) condition -> . MI
    (141) condition -> . NE
    (142) condition -> . PL
    (143) condition -> . VC
    (144) condition -> . VS

    HEXNUM          reduce using rule 30 (cmn_cmd -> CMN .)
    CONSTNUM        reduce using rule 30 (cmn_cmd -> CMN .)
    REGISTER        reduce using rule 30 (cmn_cmd -> CMN .)
    STATUS          shift and go to state 51
    AL              shift and go to state 60
    CC              shift and go to state 57
    CS              shift and go to state 67
    EQ              shift and go to state 68
    GE              shift and go to state 63
    GT              shift and go to state 53
    HI              shift and go to state 64
    HS              shift and go to state 58
    LE              shift and go to state 52
    LO              shift and go to state 66
    LS              shift and go to state 65
    LT              shift and go to state 62
    MI              shift and go to state 59
    NE              shift and go to state 55
    PL              shift and go to state 54
    VC              shift and go to state 61
    VS              shift and go to state 56

    condition                      shift and go to state 69

state 3

    (34) command -> cmp_cmd . argument shifter
    (125) argument -> . HEXNUM
    (126) argument -> . CONSTNUM
    (127) argument -> . REGISTER

    HEXNUM          shift and go to state 73
    CONSTNUM        shift and go to state 72
    REGISTER        shift and go to state 70

    argument                       shift and go to state 71

state 4

    (94) sub_cmd -> SUB .
    (95) sub_cmd -> SUB . STATUS
    (96) sub_cmd -> SUB . condition STATUS
    (97) sub_cmd -> SUB . condition
    (128) condition -> . AL
    (129) condition -> . CC
    (130) condition -> . CS
    (131) condition -> . EQ
    (132) condition -> . GE
    (133) condition -> . GT
    (134) condition -> . HI
    (135) condition -> . HS
    (136) condition -> . LE
    (137) condition -> . LO
    (138) condition -> . LS
    (139) condition -> . LT
    (140) condition -> . MI
    (141) condition -> . NE
    (142) condition -> . PL
    (143) condition -> . VC
    (144) condition -> . VS

    HEXNUM          reduce using rule 94 (sub_cmd -> SUB .)
    CONSTNUM        reduce using rule 94 (sub_cmd -> SUB .)
    REGISTER        reduce using rule 94 (sub_cmd -> SUB .)
    STATUS          shift and go to state 74
    AL              shift and go to state 60
    CC              shift and go to state 57
    CS              shift and go to state 67
    EQ              shift and go to state 68
    GE              shift and go to state 63
    GT              shift and go to state 53
    HI              shift and go to state 64
    HS              shift and go to state 58
    LE              shift and go to state 52
    LO              shift and go to state 66
    LS              shift and go to state 65
    LT              shift and go to state 62
    MI              shift and go to state 59
    NE              shift and go to state 55
    PL              shift and go to state 54
    VC              shift and go to state 61
    VS              shift and go to state 56

    condition                      shift and go to state 75

state 5

    (114) umull_cmd -> UMULL .
    (115) umull_cmd -> UMULL . STATUS
    (116) umull_cmd -> UMULL . condition STATUS
    (117) umull_cmd -> UMULL . condition
    (128) condition -> . AL
    (129) condition -> . CC
    (130) condition -> . CS
    (131) condition -> . EQ
    (132) condition -> . GE
    (133) condition -> . GT
    (134) condition -> . HI
    (135) condition -> . HS
    (136) condition -> . LE
    (137) condition -> . LO
    (138) condition -> . LS
    (139) condition -> . LT
    (140) condition -> . MI
    (141) condition -> . NE
    (142) condition -> . PL
    (143) condition -> . VC
    (144) condition -> . VS

    HEXNUM          reduce using rule 114 (umull_cmd -> UMULL .)
    CONSTNUM        reduce using rule 114 (umull_cmd -> UMULL .)
    REGISTER        reduce using rule 114 (umull_cmd -> UMULL .)
    STATUS          shift and go to state 76
    AL              shift and go to state 60
    CC              shift and go to state 57
    CS              shift and go to state 67
    EQ              shift and go to state 68
    GE              shift and go to state 63
    GT              shift and go to state 53
    HI              shift and go to state 64
    HS              shift and go to state 58
    LE              shift and go to state 52
    LO              shift and go to state 66
    LS              shift and go to state 65
    LT              shift and go to state 62
    MI              shift and go to state 59
    NE              shift and go to state 55
    PL              shift and go to state 54
    VC              shift and go to state 61
    VS              shift and go to state 56

    condition                      shift and go to state 77

state 6

    (15) command -> and_cmd . argument argument shifter
    (125) argument -> . HEXNUM
    (126) argument -> . CONSTNUM
    (127) argument -> . REGISTER

    HEXNUM          shift and go to state 73
    CONSTNUM        shift and go to state 72
    REGISTER        shift and go to state 70

    argument                       shift and go to state 78

state 7

    (10) command -> add_cmd . argument argument shifter
    (125) argument -> . HEXNUM
    (126) argument -> . CONSTNUM
    (127) argument -> . REGISTER

    HEXNUM          shift and go to state 73
    CONSTNUM        shift and go to state 72
    REGISTER        shift and go to state 70

    argument                       shift and go to state 79

state 8

    (78) command -> sbc_cmd . argument argument shifter
    (125) argument -> . HEXNUM
    (126) argument -> . CONSTNUM
    (127) argument -> . REGISTER

    HEXNUM          shift and go to state 73
    CONSTNUM        shift and go to state 72
    REGISTER        shift and go to state 70

    argument                       shift and go to state 80

state 9

    (3) line -> LABEL . command
    (5) command -> . adc_cmd argument argument shifter
    (10) command -> . add_cmd argument argument shifter
    (15) command -> . and_cmd argument argument shifter
    (20) command -> . b_cmd branchtarget
    (24) command -> . bic_cmd argument argument shifter
    (29) command -> . cmn_cmd argument shifter
    (34) command -> . cmp_cmd argument shifter
    (39) command -> . eor_cmd argument argument shifter
    (44) command -> . mla_cmd argument argument argument argument
    (49) command -> . mov_cmd argument shifter
    (54) command -> . mul_cmd argument argument argument argument
    (58) command -> . mvn_cmd argument shifter
    (63) command -> . orr_cmd argument argument shifter
    (68) command -> . rsb_cmd argument argument shifter
    (73) command -> . rsc_cmd argument argument shifter
    (78) command -> . sbc_cmd argument argument shifter
    (83) command -> . smlal_cmd argument argument argument argument
    (88) command -> . smull_cmd argument argument argument argument
    (93) command -> . sub_cmd argument argument shifter
    (98) command -> . teq_cmd argument shifter
    (103) command -> . tst_cmd argument shifter
    (108) command -> . umlal_cmd argument argument argument argument
    (113) command -> . umull_cmd argument argument argument argument
    (6) adc_cmd -> . ADC
    (7) adc_cmd -> . ADC STATUS
    (8) adc_cmd -> . ADC condition STATUS
    (9) adc_cmd -> . ADC condition
    (11) add_cmd -> . ADD
    (12) add_cmd -> . ADD STATUS
    (13) add_cmd -> . ADD condition STATUS
    (14) add_cmd -> . ADD condition
    (16) and_cmd -> . AND
    (17) and_cmd -> . AND STATUS
    (18) and_cmd -> . AND condition STATUS
    (19) and_cmd -> . AND condition
    (21) b_cmd -> . B
    (22) b_cmd -> . B condition
    (23) b_cmd -> . B LINK
    (25) bic_cmd -> . BIC
    (26) bic_cmd -> . BIC STATUS
    (27) bic_cmd -> . BIC condition STATUS
    (28) bic_cmd -> . BIC condition
    (43) bic_cmd -> . EOR condition
    (48) bic_cmd -> . MLA condition
    (67) bic_cmd -> . ORR condition
    (30) cmn_cmd -> . CMN
    (31) cmn_cmd -> . CMN STATUS
    (32) cmn_cmd -> . CMN condition STATUS
    (33) cmn_cmd -> . CMN condition
    (35) cmp_cmd -> . CMP
    (36) cmp_cmd -> . CMP STATUS
    (37) cmp_cmd -> . CMP condition STATUS
    (38) cmp_cmd -> . CMP condition
    (40) eor_cmd -> . EOR
    (41) eor_cmd -> . EOR STATUS
    (42) eor_cmd -> . EOR condition STATUS
    (45) mla_cmd -> . MLA
    (46) mla_cmd -> . MLA STATUS
    (47) mla_cmd -> . MLA condition STATUS
    (57) mla_cmd -> . MUL condition STATUS
    (50) mov_cmd -> . MOV
    (51) mov_cmd -> . MOV STATUS
    (52) mov_cmd -> . MOV condition STATUS
    (53) mov_cmd -> . MOV condition
    (55) mul_cmd -> . MUL
    (56) mul_cmd -> . MUL STATUS
    (59) mvn_cmd -> . MVN
    (60) mvn_cmd -> . MVN STATUS
    (61) mvn_cmd -> . MVN condition STATUS
    (62) mvn_cmd -> . MVN condition
    (64) orr_cmd -> . ORR
    (65) orr_cmd -> . ORR STATUS
    (66) orr_cmd -> . ORR condition STATUS
    (69) rsb_cmd -> . RSB
    (70) rsb_cmd -> . RSB STATUS
    (71) rsb_cmd -> . RSB condition STATUS
    (72) rsb_cmd -> . RSB condition
    (74) rsc_cmd -> . RSC
    (75) rsc_cmd -> . RSC STATUS
    (76) rsc_cmd -> . RSC condition STATUS
    (77) rsc_cmd -> . RSC condition
    (79) sbc_cmd -> . SBC
    (80) sbc_cmd -> . SBC STATUS
    (81) sbc_cmd -> . SBC condition STATUS
    (82) sbc_cmd -> . SBC condition
    (84) smlal_cmd -> . SMLAL
    (85) smlal_cmd -> . SMLAL STATUS
    (86) smlal_cmd -> . SMLAL condition STATUS
    (87) smlal_cmd -> . SMLAL condition
    (89) smull_cmd -> . SMULL
    (90) smull_cmd -> . SMULL STATUS
    (91) smull_cmd -> . SMULL condition STATUS
    (92) smull_cmd -> . SMULL condition
    (94) sub_cmd -> . SUB
    (95) sub_cmd -> . SUB STATUS
    (96) sub_cmd -> . SUB condition STATUS
    (97) sub_cmd -> . SUB condition
    (99) teq_cmd -> . TEQ
    (100) teq_cmd -> . TEQ STATUS
    (101) teq_cmd -> . TEQ condition STATUS
    (102) teq_cmd -> . TEQ condition
    (104) tst_cmd -> . TST
    (105) tst_cmd -> . TST STATUS
    (106) tst_cmd -> . TST condition STATUS
    (107) tst_cmd -> . TST condition
    (109) umlal_cmd -> . UMLAL
    (110) umlal_cmd -> . UMLAL STATUS
    (111) umlal_cmd -> . UMLAL condition STATUS
    (112) umlal_cmd -> . UMLAL condition
    (114) umull_cmd -> . UMULL
    (115) umull_cmd -> . UMULL STATUS
    (116) umull_cmd -> . UMULL condition STATUS
    (117) umull_cmd -> . UMULL condition

    ADC             shift and go to state 39
    ADD             shift and go to state 37
    AND             shift and go to state 42
    B               shift and go to state 32
    BIC             shift and go to state 22
    EOR             shift and go to state 11
    MLA             shift and go to state 24
    ORR             shift and go to state 29
    CMN             shift and go to state 2
    CMP             shift and go to state 17
    MUL             shift and go to state 14
    MOV             shift and go to state 44
    MVN             shift and go to state 38
    RSB             shift and go to state 45
    RSC             shift and go to state 46
    SBC             shift and go to state 28
    SMLAL           shift and go to state 16
    SMULL           shift and go to state 36
    SUB             shift and go to state 4
    TEQ             shift and go to state 48
    TST             shift and go to state 15
    UMLAL           shift and go to state 19
    UMULL           shift and go to state 5

    cmp_cmd                        shift and go to state 3
    and_cmd                        shift and go to state 6
    add_cmd                        shift and go to state 7
    sbc_cmd                        shift and go to state 8
    adc_cmd                        shift and go to state 10
    tst_cmd                        shift and go to state 12
    mul_cmd                        shift and go to state 13
    sub_cmd                        shift and go to state 18
    umull_cmd                      shift and go to state 20
    bic_cmd                        shift and go to state 21
    smull_cmd                      shift and go to state 23
    rsc_cmd                        shift and go to state 25
    teq_cmd                        shift and go to state 26
    umlal_cmd                      shift and go to state 27
    cmn_cmd                        shift and go to state 30
    b_cmd                          shift and go to state 31
    mla_cmd                        shift and go to state 33
    rsb_cmd                        shift and go to state 34
    smlal_cmd                      shift and go to state 35
    mvn_cmd                        shift and go to state 40
    eor_cmd                        shift and go to state 43
    mov_cmd                        shift and go to state 47
    command                        shift and go to state 81
    orr_cmd                        shift and go to state 50

state 10

    (5) command -> adc_cmd . argument argument shifter
    (125) argument -> . HEXNUM
    (126) argument -> . CONSTNUM
    (127) argument -> . REGISTER

    HEXNUM          shift and go to state 73
    CONSTNUM        shift and go to state 72
    REGISTER        shift and go to state 70

    argument                       shift and go to state 82

state 11

    (43) bic_cmd -> EOR . condition
    (40) eor_cmd -> EOR .
    (41) eor_cmd -> EOR . STATUS
    (42) eor_cmd -> EOR . condition STATUS
    (128) condition -> . AL
    (129) condition -> . CC
    (130) condition -> . CS
    (131) condition -> . EQ
    (132) condition -> . GE
    (133) condition -> . GT
    (134) condition -> . HI
    (135) condition -> . HS
    (136) condition -> . LE
    (137) condition -> . LO
    (138) condition -> . LS
    (139) condition -> . LT
    (140) condition -> . MI
    (141) condition -> . NE
    (142) condition -> . PL
    (143) condition -> . VC
    (144) condition -> . VS

    HEXNUM          reduce using rule 40 (eor_cmd -> EOR .)
    CONSTNUM        reduce using rule 40 (eor_cmd -> EOR .)
    REGISTER        reduce using rule 40 (eor_cmd -> EOR .)
    STATUS          shift and go to state 83
    AL              shift and go to state 60
    CC              shift and go to state 57
    CS              shift and go to state 67
    EQ              shift and go to state 68
    GE              shift and go to state 63
    GT              shift and go to state 53
    HI              shift and go to state 64
    HS              shift and go to state 58
    LE              shift and go to state 52
    LO              shift and go to state 66
    LS              shift and go to state 65
    LT              shift and go to state 62
    MI              shift and go to state 59
    NE              shift and go to state 55
    PL              shift and go to state 54
    VC              shift and go to state 61
    VS              shift and go to state 56
